--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/dark.css",
               "src/styles.scss"
             ],
             "scripts": []
